# Thug-Fugu

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: package.yml  quality.yml  test.yml
docs/design/: active-health-queue.md  distributed-inference.md  fugu-style-coordinator-spec.md  http-server-side-tool-execution.md  local-llm-orchestration.md  multi-terminal-orchestration.md  tool-calling-support.md  true-token-streaming.md
docs/integrations/: claude-code.md
docs/operations/: evaluation-harness.md  multi-gpu-role-assignment.md  security-profile.md
docs/reference/: openai-compatibility.md  usage-accounting.md
evals/: smoke.jsonl
examples/: fugu-local.consult.json  fugu-local.coordinator.json  fugu-local.echo.json  fugu-local.gpt-oss.json  fugu-local.model-pool.json  fugu-local.multi-gpu.json  fugu-local.ollama.json  fugu-local.openai-compatible.json  fugu-local.single-gpu.json  fugu-local.tool-calling.json  fugu-local.tool-exec.json
scripts/: benchmark_parallel_roles.py  evaluate_orchestration.py  serve_local_models.py
src/fugu_local/: __init__.py  backends.py  cli.py  config.py  consult.py  coordinator.py  health.py  mcp_server.py  orchestrator.py  routing.py  server.py  serverplan.py  tools.py
tests/: test_backends.py  test_cli.py  test_config.py  test_consult.py  test_coordinator.py  test_evaluate_orchestration.py  test_health.py  test_orchestrator.py  test_routing.py  test_server.py  test_serverplan.py  test_tools.py
