[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "thug-fugu-local"
version = "0.1.0"
description = "Local LLM orchestration bridge inspired by Thug AI Fugu."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Thug-Fugu contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "coverage[toml]>=7",
]
mcp = [
  "mcp>=1.2",
]

[project.scripts]
fugu-local = "fugu_local.cli:main"
fugu-local-mcp = "fugu_local.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
branch = true
source = ["fugu_local"]
omit = ["src/fugu_local/mcp_server.py"]

[tool.coverage.report]
show_missing = true
